# 1cmd-ai

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  PITCH.md  README.md  docker-compose.yml  install-user-service.sh  plan.md  pyproject.toml  restart.sh  setup.sh
.github/workflows/: ci.yml  docker.yml
.onecmd/skills/: skills.json
.onecmd/skills/new-skill/: README.md  SKILL.json
docs/: SKILLS_DESIGN.md  demo-script.md
include/: backend.h  bot.h  bot_utils.h  commands.h  emoji.h  format.h  manager_ipc.h  sqlite_wrap.h  state.h  terminal_io.h  totp.h  types.h
mgr/: background_task.py  default_sop.md  llm.py  main.py  manager.py  memory.py  smart_task.py  sop.py  stats.py  terminal_queue.py  tools.py  utils.py
onecmd/: config.py  emoji.py  main.py  store.py  texts.py
onecmd/admin/: auth.py  routes_connectors.py  routes_cron.py  routes_editor.py  routes_terminals.py  routes_webhooks.py  server.py
onecmd/admin/static/: connectors.js  cron.js  editor.js  index.html  style.css  terminals.js
onecmd/auth/: claude.py  codex.py  owner.py  totp.py
onecmd/bot/: api.py  handler.py  poller.py
onecmd/connectors/: __init__.py  base.py  handler.py  slack.py  telegram.py
onecmd/cron/: compiler.py  default_compiler_prompt.md  engine.py  store.py
onecmd/manager/: agent.py  ceo_prompt.md  default_agent_prompt.md  default_crash_patterns.md  default_sop.md  llm.py  memory.py  queue.py  resource_monitor.py  router.py  service_restart.py  skills.py  skills_registry.py  skills_runtime.py  sop.py  tasks.py  tools.py
onecmd/manager/default_skills/: skills.json
onecmd/manager/default_skills/core-ops/: README.md  SKILL.json
onecmd/manager/default_skills/core-ops/resources/: custom-rules.md  terminal-ops.md
onecmd/manager/default_skills/new-skill/: README.md  SKILL.json
onecmd/terminal/: backend.py  combined.py  display.py  macos.py  scope.py  tmux.py
src/: backend_macos.c  backend_tmux.c  bot_api.c  bot_http.c  bot_poll.c  bot_utils.c  commands.c  emoji.c  format.c  main.c  manager_ipc.c  onecmd_ctl.c  terminal_display.c  totp.c
systemd/: onecmd.service
tests/: test_api.py  test_backend.py  test_codex_auth.py  test_combined.py  test_config.py  test_connectors.py  test_cron.py  test_display.py  test_emoji.py  test_handler.py  test_main.py  test_memory.py  test_notify.py  test_optimizations.py  test_owner.py  test_queue.py  test_resource_monitor.py  test_router.py  test_scope.py  test_service_restart.py  test_skills.py  test_skills_registry.py  test_skills_runtime.py  test_sop.py  test_store.py  test_strip_markdown.py  test_terminal_detection.py  test_tmux.py  test_tool_guards.py  test_totp.py  test_webhooks.py
