[project]
name = "onecmd"
version = "0.2.1"
description = "AI-powered terminal manager — control and automate your machines from Telegram"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "Erik"}]
keywords = ["telegram", "terminal", "ai", "automation", "remote"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",

    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "python-telegram-bot>=21.0",
    "google-genai>=1.0.0",
    "anthropic>=0.39.0",
    "pydantic>=2.0",
    "qrcode>=7.0",
]

[project.urls]
Homepage = "https://github.com/warlockee/1cmd-ai"
Repository = "https://github.com/warlockee/1cmd-ai"
Issues = "https://github.com/warlockee/1cmd-ai/issues"

[project.optional-dependencies]
macos = ["pyobjc-framework-Quartz", "pyobjc-framework-ApplicationServices"]
dev = ["pytest", "pytest-cov"]

[project.scripts]
onecmd = "onecmd.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["onecmd*"]

[tool.setuptools.package-data]
"onecmd.manager" = ["default_sop.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
